Mesh appears flat shaded in edit mode when auto smooth is enabled #90256

Closed
opened 2021-07-28 09:40:23 +02:00 by Zino Guerr · 7 comments

System Information
Operating system: Windows-10-10.0.14393-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-28 03:38, hash: ce68888d1b
Worked: (newest version of Blender that worked as expected)
Caused by 39b2a7bb7e

Short description of error
When setting autosmooth to 180° it results to flat shading.

Exact steps for others to reproduce the error

  • Add a mesh UV Sphere.
  • Shade Smooth it.
  • Goto Object Data Properties.
  • Normals -> enable Autosmooth and set it to 180°.
  • Hide the Overlays and enter edit mode.
  • Observe how the mesh now looks flat shaded.
  • Fiddle with the angle a little bit so it's shading is back to smooth then set it to180°.
  • Exit then Enter edit mode again and you'll see the mesh flat shaded again.

or

  • Open .blend file
  • switch to edit mode

#90256.blend

**System Information** Operating system: Windows-10-10.0.14393-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-28 03:38, hash: `ce68888d1b` Worked: (newest version of Blender that worked as expected) Caused by 39b2a7bb7e **Short description of error** When setting autosmooth to 180° it results to flat shading. **Exact steps for others to reproduce the error** * Add a mesh UV Sphere. * Shade Smooth it. * Goto Object Data Properties. * Normals -> enable Autosmooth and set it to 180°. * Hide the Overlays and enter edit mode. * Observe how the mesh now looks flat shaded. * Fiddle with the angle a little bit so it's shading is back to smooth then set it to180°. * Exit then Enter edit mode again and you'll see the mesh flat shaded again. --- or - Open .blend file - switch to edit mode [#90256.blend](https://archive.blender.org/developer/F10261838/T90256.blend)
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Can confirm. Recent regression it seems.

Will bisect.

Can confirm. Recent regression it seems. Will bisect.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by 39b2a7bb7e

Recent regression so marking this a high priority issue.

Caused by 39b2a7bb7e Recent regression so marking this a high priority issue.
Pratik Borhade changed title from Autosmooth 180° bug. to Mesh appears flat shaded in edit mode when auto smooth is enabled 2021-07-28 12:29:37 +02:00

This issue was referenced by 647a8bff06

This issue was referenced by 647a8bff06bfabeafa01333d4b9d8d8b8ae1c569

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-08-05 10:22:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90256
No description provided.