Fix T90256: faces are flat shaded in edit mode with auto smooth

Regression in 39b2a7bb7e815e051348bf5c5ec777d091324164.